# CPP23EnterpriseReadyProjectSkeleton

./: .gitignore  Bootstrap.ps1  Bootstrap.sh  CMakeLists.txt  CMakePresets.json  CPP23EnterpriseReadyProjectSkeleton.cpp  CPP23EnterpriseReadyProjectSkeleton.h  LICENSE  README.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  cmake-single-platform.yml  codeql.yml  label.yml  main.yml  stale.yml
src/: main.cpp
src/ModuleA/: Component1.cpp  Component1.ixx  ModuleA.ixx
